tests/cases/comptime_runtime.mzc
// comptime cannot read a runtime value.
function main() {
  let x: i32 = 3;
  let y = comptime (x + 1);   // error: x is not known at build time
  stdout.println(y);
}
